# pivot_animator-

./: CMakeLists.txt  README.md  build_and_install.sh  canvas.h  codepanel.h  exporter.h  interpreter.h  mainwindow.h  timeline.h  types.h
src/: animdata.cpp  animdata.h  canvaswidget.cpp  canvaswidget.h  codeeditordialog.cpp  codeeditordialog.h  main.cpp  mainwindow.cpp  mainwindow.h  timelinewidget.cpp  timelinewidget.h
